--- a/claim/index1.html
+++ b/claim/index1.html
@@ -7,40 +7,32 @@
 </head>
 <body>
     <h1>PLRT Vesting</h1>
+    <!-- Connect Wallet Button -->
+    <button id="connectWalletButton">Connect Wallet</button>
     <div id="walletInfo"></div>
 
-    <!-- Update the Web3.js CDN link to a more recent version -->
+    <!-- Web3.js CDN Link -->
     <script src="https://cdn.jsdelivr.net/npm/web3@1.6.1/dist/web3.min.js"></script>
     <script>
-    // Initialize Web3
-    if (window.ethereum) {
-        window.web3 = new Web3(window.ethereum);
-
-        // Use the new method for requesting account access
-        window.ethereum.request({ method: 'eth_requestAccounts' })
-            .then(accounts => {
-                if (accounts.length > 0) {
-                    console.log('Account:', accounts[0]);
-                    // Proceed with initializing the application
-                    initializeApp();
-                }
-            })
-            .catch((err) => {
-                console.error('User denied account access', err);
-            });
-
-        // Listen for the 'disconnect' event instead of the deprecated 'close' event
-        window.ethereum.on('disconnect', (error) => {
-            console.log('Disconnected', error);
-            alert('Wallet disconnected. Please connect again to continue.');
-            // Handle the disconnect logic here, such as prompting the user to reconnect their wallet
-        });
-    } else if (window.web3) {
-        window.web3 = new Web3(window.web3.currentProvider);
-        initializeApp();
-    } else {
-        console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
-    }
+    // Listen for click event on the Connect Wallet button
+    document.getElementById('connectWalletButton').addEventListener('click', function() {
+        if (window.ethereum) {
+            window.web3 = new Web3(window.ethereum);
+            window.ethereum.request({ method: 'eth_requestAccounts' })
+                .then(accounts => {
+                    if (accounts.length > 0) {
+                        console.log('Account:', accounts[0]);
+                        // Proceed with initializing the application
+                        initializeApp();
+                    }
+                })
+                .catch((err) => {
+                    console.error('User denied account access', err);
+                });
+        } else {
+            console.log('Non-Ethereum browser detected. You should consider trying MetaMask!');
+        }
+    });
         function initializeApp() {
     // Fetch ABI from external JSON file
     fetch('abi.json')
@@ -106,5 +98,7 @@
         .catch(error => console.error('Error fetching ABI:', error));
 }
 </script>
+    
+
 </body>
 </html>
